--- a/NumGroupC/NumGroupC.vcxproj.filters
+++ b/NumGroupC/NumGroupC.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
