--- a/NumGroupC/NumGroupC.vcxproj
+++ b/NumGroupC/NumGroupC.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{0343CDE0-B696-4975-AF81-2E0E9024169D}</ProjectGuid>
+    <ProjectGuid>{9B240BBE-18C7-4400-A85E-C34668BE03DD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NumGroupCpp</RootNamespace>
+    <RootNamespace>NumGroupC</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -142,7 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
