第一个可以求解的版本, 添加了jm_readkey()函数;
Signed-off-by: shines77 <gz_shines@msn.com>

--- a/NumGroup/NumGroup.vcxproj
+++ b/NumGroup/NumGroup.vcxproj
@@ -150,7 +150,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="get_char.c" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="get_char.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
