新增了最后一个group的快速判断, 并对工程做了很大改动, 移除了C版本的工程文件;
Signed-off-by: shines77 <gz_shines@msn.com>

--- a/src/NumberGroup/NumberGroup.vcxproj
+++ b/src/NumberGroup/NumberGroup.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0343CDE0-B696-4975-AF81-2E0E9024169D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NumGroup</RootNamespace>
+    <RootNamespace>NumberGroup</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
